@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2003/09/03 16:38:36 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2003/09/04 01:51:15 jlam Exp $
 #
 
-DISTNAME=		libnbcompat-20030827
+DISTNAME=		libnbcompat-20030828
 CATEGORIES=		pkgtools
 MASTER_SITES=		# empty
 DISTFILES=		# empty
